--- a/CryptoRates/ClientApp/src/index.html
+++ b/CryptoRates/ClientApp/src/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8" />
-  <title>CryptoRates</title>
-  <base href="/" />
+    <base href="/" />
+    <title>Angular 8 - Role Based Authorization Tutorial & Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+    <!-- bootstrap css -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-  <body>
-    <app-root>Loading...</app-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+<body>
+    <app>Loading...</app>
 </body>
 </html>
